jQueryを使わないようにした

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,13 @@
 doctype html
 html
   head
-    meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
+    meta(charset="utf-8")
     meta(http-equiv="Content-Language", content="ja")
     meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう")
     meta(name="description", content="てゆうかもう寝よう")
     title="てゆうかもう寝よう。"
-    script(type="application/javascript", src="/javascripts/analytics.js")
-    script(type="application/javascript", src="/javascripts/jquery-2.1.0.min.js")
-    script(type="application/javascript", src="/javascripts/index.js")
+    script(type="application/javascript", src="/javascripts/index.js", defer)
+    script(type="application/javascript", src="/javascripts/analytics.js", defer)
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(type="text/css", rel="stylesheet", href="/stylesheets/style.css")
   body
