--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ html
     meta(http-equiv="Content-Language", content="ja")
     meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう")
     meta(name="description", content="てゆうかもう寝よう")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     title="てゆうかもう寝よう。"
     script(type="application/javascript", src="/javascripts/index.js", defer)
     script(type="application/javascript", src="/javascripts/analytics.js", defer)
