--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -7,10 +7,9 @@ html
     meta(name="description", content="てゆうかもう寝よう")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title="てゆうかもう寝よう。"
-    script(type="application/javascript", src="/javascripts/index.js", defer)
-    script(type="application/javascript", src="/javascripts/analytics.js", defer)
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(type="text/css", rel="stylesheet", href="/stylesheets/style.css")
+    script(type="application/javascript", src="/javascripts/client.js", defer)
   body
     div.title
       a#title てゆうかもう寝よう。
