--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,8 +14,8 @@ body {
 
 .image {
   margin: 0 auto;
-  width: 400px;
-  height: 400px;
+  width: 320px;
+  height: 320px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
@@ -34,15 +34,14 @@ body {
 
 .items {
   margin: 0 auto;
-  width: 400px;
-  height: 400px;
+  max-width: 780px;
 }
 
 .items div {
   float: left;
-  width: 112px;
-  height: 112px;
-  margin: 16px 0 0 16px;
+  width: 100px;
+  height: 100px;
+  margin: 10px 0 0 10px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
