--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background-color: #eee;
 }
@@ -12,43 +17,40 @@ body {
   cursor: pointer;
 }
 
-.image {
-  margin: 0 auto;
-  width: 400px;
-  height: 400px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: #fff;
-  border-radius: 20px;
-}
-
-.tweet {
-  margin: 20px 0 4px 0;
-  text-align: center;
-}
-
-.tweet button {
-  font-size: 30px;
-}
-
 .items {
   margin: 0 auto;
-  width: 400px;
-  height: 400px;
+  max-width: 880px;
 }
 
-.items div {
+.items div, .items a {
   float: left;
-  width: 112px;
-  height: 112px;
-  margin: 16px 0 0 16px;
+  width: 100px;
+  height: 100px;
+  margin: 0 10px 10px 0;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #fff;
   border-radius: 20px;
   cursor: pointer;
+}
+
+.items .selected {
+  width: 320px;
+  height: 320px;
+  cursor: auto;
+}
+
+.items .tweet {
+  background-color: #55acee;
+  background-image: url("/images/Twitter_logo_white.png");
+  background-size: auto;
+}
+
+.items .count {
+  text-align: center;
+  line-height: 100px;
+  font-size: 20px;
 }
 
 .clearboth {
