--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -13,11 +13,10 @@ html
   body
     div.title
       a#title てゆうかもう寝よう。
-    div#image.image
-    div.tweet
-      a#tweet(target="_blank")
-        button ツイート
     div#items.items
+      div#selected.selected
+      a#tweet.tweet(target="_blank")
+      a#count.count(target="_blank")
     div.clearboth
     div.footer
       p &copy;&nbsp;2014&nbsp;
