--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -16,6 +16,7 @@ html
     div#items.items
       div#selected.selected
       a#tweet.tweet(target="_blank")
+        p ツイート
       a#count.count(target="_blank")
     div.clearboth
     div.footer
