--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -15,9 +15,9 @@ html
       a#title てゆうかもう寝よう。
     div#items.items
       div#selected.selected
-      a#tweet.tweet(target="_blank")
+      a#tweet.tweet.arrow(target="_blank")
         p ツイート
-      a#count.count(target="_blank")
+      a#count.count.arrow(target="_blank")
     div.clearboth
     div.footer
       p &copy;&nbsp;2014&nbsp;
