--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -17,10 +17,10 @@ html
       div#selected.selected
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
-      a#count.count.arrow(target="_blank")
+      a#count.count.arrow(target="_blank") #{count}
     div.clearboth
     div.footer
       p &copy;&nbsp;2014&nbsp;
         a(href="https://twitter.com/rgx_6", target="_blank") @rgx_6
-        ,&nbsp;
+        | ,&nbsp;
         a(href="https://twitter.com/dangoinette", target="_blank") @dangoinette
