--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -21,6 +21,7 @@ html
     div.clearboth
     div.footer
       p &copy;&nbsp;2014&nbsp;
+        | 作:&nbsp;
         a(href="https://twitter.com/rgx_6", target="_blank") @rgx_6
-        | ,&nbsp;
+        | ,&nbsp;絵:&nbsp;
         a(href="https://twitter.com/dangoinette", target="_blank") @dangoinette
