--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,6 +67,26 @@ body {
   font-size: 20px;
 }
 
+.items .sorting {
+  border: solid 3px #55acee;
+}
+
+.sort label {
+  display: block;
+  margin: 22px 0;
+  text-align: center;
+  line-height: 17px;
+  font-size: 17px;
+}
+
+.modelabel.on {
+  color: #ee55ac;
+}
+
+.modelabel.off {
+  color: #55acee;
+}
+
 .arrow:after {
   border: solid transparent;
   content: " ";
