--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1,3 +1,9 @@
+/*! jQuery UI - v1.11.2 - 2014-12-09
+* http://jqueryui.com
+* Includes: core.css, sortable.css
+* Copyright 2014 jQuery Foundation and other contributors; Licensed MIT */
+
+.ui-helper-hidden{display:none}.ui-helper-hidden-accessible{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}.ui-helper-clearfix:before,.ui-helper-clearfix:after{content:"";display:table;border-collapse:collapse}.ui-helper-clearfix:after{clear:both}.ui-helper-clearfix{min-height:0}.ui-helper-zfix{width:100%;height:100%;top:0;left:0;position:absolute;opacity:0;filter:Alpha(Opacity=0)}.ui-front{z-index:100}.ui-state-disabled{cursor:default!important}.ui-icon{display:block;text-indent:-99999px;overflow:hidden;background-repeat:no-repeat}.ui-widget-overlay{position:fixed;top:0;left:0;width:100%;height:100%}.ui-sortable-handle{-ms-touch-action:none;touch-action:none}
 * {
   margin: 0px;
   padding: 0px;
@@ -65,6 +71,26 @@ body {
   text-align: center;
   line-height: 100px;
   font-size: 20px;
+}
+
+.items .sorting {
+  border: solid 3px #55acee;
+}
+
+.sort label {
+  display: block;
+  margin: 22px 0;
+  text-align: center;
+  line-height: 17px;
+  font-size: 17px;
+}
+
+.modelabel.on {
+  color: #ee55ac;
+}
+
+.modelabel.off {
+  color: #55acee;
 }
 
 .arrow:after {
