--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -13,7 +13,7 @@ html
   body
     div.title
       a#title てゆうかもう寝よう。
-    div#items.items(style="float: left;")
+    div#items.items
       div#selected.selected.notsortable
       a#tweet.tweet.arrow.notsortable(target="_blank")
         p ツイート
