--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -93,6 +93,24 @@ body {
   color: #55acee;
 }
 
+.sync {
+  position: relative;
+  text-align: center;
+  line-height: 100px;
+  font-size: 17px;
+}
+
+.updated {
+  display: none;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+}
+
 .arrow:after {
   border: solid transparent;
   content: " ";
