--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,7 +52,7 @@ body {
   background-size: auto;
 }
 
-.items .tweet p {
+.items p {
   position: absolute;
   text-align: center;
   color: #fff;
@@ -69,6 +69,11 @@ body {
 
 .items .sorting {
   border: solid 3px #55acee;
+}
+
+.starap {
+  position: relative;
+  background-image: url("/images/starap.jpg");
 }
 
 .sort label {
