--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -21,6 +21,8 @@ html
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow(target="_blank")
+      a.starap(target="_blank", href="http://alice-books.com/item/show/2888-2")
+        p グッズ通販
       div#sort.sort
         label ならべかえ
         label#modelabel.modelabel.off OFF
