--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -3,8 +3,8 @@ html
   head
     meta(charset="utf-8")
     meta(http-equiv="Content-Language", content="ja")
-    meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう,ていうかもう寝よう")
-    meta(name="description", content="てゆうかもう寝よう")
+    meta(name="keywords", content="すたちゅー,スタチュー,てゆうかもう寝よう,ツイッター,Twitter,スタンプ")
+    meta(name="description", content="不思議な生物すたちゅーのツイッター用すたんぷです。")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title="てゆうかもう寝よう。"
     link(rel="icon", href="/images/favicon.png", type="image/png")
