--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -27,6 +27,8 @@ html
         label ならべかえ
         label#modelabel.modelabel.off OFF
       div#sync.sync ならび同期
+      a.sta4koma(target="_blank", href="http://sta4koma.rgx6.com/")
+        p 4コマまんが
     div.clearboth
     div#updated.updated ならび順を保存しました
     div.footer
