アニメーションの画像を追加

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -159,7 +159,7 @@ a.sta4koma {
   margin-left: -10px;
 }
 
-.anime {
+.bullet {
   position: fixed;
   background-size: contain;
   background-repeat: no-repeat;
