--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -165,7 +165,7 @@ a.sta4koma {
   margin-left: -10px;
 }
 
-.anime {
+.bullet {
   position: fixed;
   background-size: contain;
   background-repeat: no-repeat;
