タイトルを連打しやすいようにCSSを調整

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -15,7 +15,7 @@ html
       var _stampOrder = !{JSON.stringify(stampOrder)};
   body
     div.title
-      a#title てゆうかもう寝よう。
+      a#title(unselectable="on") てゆうかもう寝よう。
     div#items.items
       div#selected.selected
       a#tweet.tweet.arrow(target="_blank")
