--- a/src/css/style.css
+++ b/src/css/style.css
@@ -180,3 +180,10 @@ a.sta4koma {
 .footer {
   text-align: center;
 }
+
+.launchCounter {
+  position: fixed;
+  top: 50px;
+  left: 20px;
+  z-index: 2;
+}
