--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -186,3 +186,10 @@ a.sta4koma {
 .footer {
   text-align: center;
 }
+
+.launchCounter {
+  position: fixed;
+  top: 50px;
+  left: 20px;
+  z-index: 2;
+}
