--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -37,3 +37,4 @@ html
         a(href="https://twitter.com/rgx_6", target="_blank") @rgx_6
         | ,&nbsp;絵:&nbsp;
         a(href="https://twitter.com/dangoinette", target="_blank") @dangoinette
+    div#launchCounter.launchCounter
