TA機能を実装

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -18,6 +18,13 @@ html
       a#title(unselectable="on") てゆうかもう寝よう。
     div#items.items
       div#selected.selected
+        div#taInfo.taInfo
+          p すたとばしTA
+          p#taCount
+          p#taTime
+          p#taCps
+          p#taAvgCps
+          p#taMaxCps
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow(target="_blank")
