--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,6 +51,28 @@ body {
   cursor: auto;
 }
 
+.items .selected .taInfo {
+  cursor: auto;
+  display: none;
+  width: 320px;
+  height: 320px;
+  background-color: #fff;
+  opacity: 0.95;
+}
+
+.items .selected .taInfo p:first-child {
+  margin: 40px 0 30px;
+}
+
+.items .selected .taInfo p {
+  position: relative;
+  text-align: center;
+  margin-top: 20px;
+  line-height: 25px;
+  font-size: 25px;
+  color: #000;
+}
+
 .items .tweet {
   position: relative;
   background-color: #55acee;
