--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -25,6 +25,7 @@ html
           p#taCps
           p#taAvgCps
           p#taMaxCps
+          p#taReset.taReset リセット
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow(target="_blank")
