--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -119,6 +119,18 @@ body {
   border: solid 3px #55acee;
 }
 
+a.birthday {
+  display: none;
+  position: relative;
+  background-color: #DFEAD6;
+}
+
+.birthday p {
+  top: 20px;
+  line-height: 20px;
+  color: #000;
+}
+
 .starap {
   position: relative;
   background-image: url("/images/starap.jpg");
