エイプリルフール

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -9,7 +9,7 @@ html
     title="てゆうかもう寝よう。"
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(type="text/css", rel="stylesheet", href="/stylesheets/style.css?d=20150401")
-    script(type="application/javascript", src="/javascripts/client.js?d=20150401", defer)
+    script(type="application/javascript", src="/javascripts/client.js?d=20150401_", defer)
     script.
       var _id = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
