--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -35,6 +35,13 @@ html
       div#sync.sync ならび同期
       a.sta4koma(target="_blank", href="http://sta4koma.rgx6.com/")
         p 4コマまんが
+      a.stabook(target="_blank", href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
+      a.statobashi(target="_blank", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
+        p すたとばし
+          br
+          | ですくとっぷ
+          br
+          | for Win
     div.clearboth
     div#updated.updated ならび順を保存しました
     div.footer
