copyright表記のスペースを調整

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -45,9 +45,9 @@ html
     div.clearboth
     div#updated.updated ならび順を保存しました
     div.footer
-      p &copy;&nbsp;2014&nbsp;
-        | 作:&nbsp;
+      p &copy;2014
+        |  作:
         a(href="https://twitter.com/rgx_6", target="_blank") @rgx_6
-        | ,&nbsp;絵:&nbsp;
+        | , 絵:
         a(href="https://twitter.com/dangoinette", target="_blank") @dangoinette
     div#launchCounter.launchCounter
