アニメーションのサイズ調整

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -229,10 +229,7 @@ a.statobashi {
 
 .bullet {
   position: fixed;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-color: transparent;
+  z-index: 1;
 }
 
 .clearboth {
