--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -35,7 +35,7 @@ html
           p#onlineUserCount
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
-      a#count.count.arrow(target="_blank")
+      a#count.count.arrow
       div#sort.mode
         label ならべかえ
         label#sortlabel.modelabel.off OFF
@@ -43,9 +43,9 @@ html
       div#online.mode
         label おんらいん
         label#onlinelabel.modelabel.off OFF
-      a.sta4koma(target="_blank", href="http://sta4koma.rgx6.com/")
+      a.sta4koma(href="http://sta4koma.rgx6.com/")
         p 4コマまんが
-      a.stabook(target="_blank", href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
+      a.stabook(href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
       a.statobashi(target="_blank", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
         p すたとばし
           br
@@ -57,7 +57,7 @@ html
     div.footer
       p &copy;2014
         |  作:
-        a(href="https://twitter.com/rgx_6", target="_blank") @rgx_6
+        a(href="https://twitter.com/rgx_6") @rgx_6
         | , 絵:
-        a(href="https://twitter.com/dangoinette", target="_blank") @dangoinette
+        a(href="https://twitter.com/dangoinette") @dangoinette
     div#launchCounter.launchCounter
