すたとばしのinfoを最前面に表示するようにした

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -28,7 +28,7 @@ html
           p#taAvgCps
           p#taMaxCps
           p#taReset.taReset リセット
-        div#onlineInfo.taInfo
+        div#onlineInfo.onlineInfo
           p すたとばし おんらいん
           p みんなのすたちゅー
           p#onlineClickCount
