すたンプを4種類追加

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -489,3 +489,19 @@ a.statobashi {
 .sprite-stamp054 {
     background-position: -700px -400px;
 }
+
+.sprite-stamp055 {
+    background-position: -700px -500px;
+}
+
+.sprite-stamp056 {
+    background-position: -700px -600px;
+}
+
+.sprite-stamp057 {
+    background-position: 0 -700px;
+}
+
+.sprite-stamp058 {
+    background-position: -100px -700px;
+}
