--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -9,12 +9,13 @@ html
     title="てゆうかもう寝よう。"
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(type="text/css", rel="stylesheet", href="/stylesheets/style.css?d=20151106")
-    script(type="application/javascript", src="/javascripts/client.js?d=20151106", defer)
+    script(type="application/javascript", src="/javascripts/client.js?d=20151116", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
       var _stampList  = !{JSON.stringify(stampList)};
       var _animeList  = !{JSON.stringify(animeList)};
+      var _tweetCount = "#{tweetCount}";
   body
     div.title
       a#title(unselectable="on") てゆうかもう寝よう。
