--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,6 +37,7 @@ body {
 }
 
 .items div, .items a {
+  position: relative;
   float: left;
   width: 100px;
   height: 100px;
@@ -127,6 +128,19 @@ body {
   color: #fff;
   width: 100%;
   bottom: 7px;
+}
+
+.items p.rankingCount {
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 25px;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 0;
+  border-radius: 20px 0 0 0 / 20px 0 0 0;
+  color: #000;
+  background-color: #eee;
 }
 
 .items .count {
