https対応のためツイート一覧の検索urlからprotocolを削除。css spriteのキャッシュ対策。

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,7 +285,7 @@ a.statobashi {
 }
 
 .sprite {
-    background-image: url("/images/stamp/stampspritesheet.png");
+    background-image: url("/images/stamp/stampspritesheet.png?d=20151204");
 }
 
 .sprite-stamp001 {
