--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -7,6 +7,7 @@ html
     meta(name="description", content="不思議な生物すたちゅーのツイッター用すたンプです。")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title="てゆうかもう寝よう。"
+    link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(type="text/css", rel="stylesheet", href="/stylesheets/style.css?d=20151204")
     script(type="application/javascript", src="/javascripts/client.js?d=20151204", defer)
