リプライ用にツイート内容だけをクリップボードにコピーする処理を仮実装

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20151204")
-    script(src="/javascripts/client.js?d=20151204", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20151213")
+    script(src="/javascripts/client.js?d=20151213", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -54,6 +54,10 @@ html(lang="ja")
           | ですくとっぷ
           br
           | for Win
+      div#reply.reply
+        p りぷらい
+          br
+          | (てすと中)
     div.clearboth
     div#updated.updated ならび順を保存しました
     div.footer
