--- a/src/css/style.css
+++ b/src/css/style.css
@@ -199,6 +199,23 @@ a.stabook {
   bottom: 0;
 }
 
+.reply textarea {
+  background: #fff;
+  border: 0;
+  display: none;
+  font-size: 10px;
+  height: 80px;
+  line-height: 15px;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  resize: none;
+  top: 10px;
+  width: 80px;
+  word-break: break-all;
+  word-wrap: break-word;
+}
+
 .mode label {
   display: block;
   margin: 22px 0;
