--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -8,7 +8,7 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20151213")
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20151213_2")
     script(src="/javascripts/client.js?d=20151213_2", defer)
     script.
       var _id         = "#{id}";
