幅320pxのときにすたンプが2列しか表示されなかったので3列表示されるように修正

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,12 @@ body {
   cursor: pointer;
 }
 
+@media (min-width: 320px) and (max-width: 329px) {
+  .items :nth-child(3n+1) {
+    margin-right: 0;
+  }
+}
+
 .items .selected {
   position: relative;
   width: 320px;
