トップにスクロールするボタンを追加

--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20151213_2")
-    script(src="/javascripts/client.js?d=20151213_2", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20151216")
+    script(src="/javascripts/client.js?d=20151216", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -61,6 +61,7 @@ html(lang="ja")
         textarea#replytext(readonly)
     div.clearboth
     div#updated.updated ならび順を保存しました
+    div#scrollToTop.scrollToTop ↑
     div.footer
       p &copy;2014
         |  作:
