--- a/src/css/style.css
+++ b/src/css/style.css
@@ -256,6 +256,22 @@ a.stabook {
   border-radius: 10px;
 }
 
+.scrollToTop {
+  background-color: #000;
+  border-radius: 10px;
+  color: #fff;
+  display: none;
+  font-size: 30px;
+  height: 50px;
+  line-height: 50px;
+  padding: 10px;
+  position: fixed;
+  right: 20px;
+  text-align: center;
+  top: 20px;
+  width: 50px;
+}
+
 .arrow:after {
   border: solid transparent;
   content: ' ';
