--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,8 +157,10 @@ body {
   font-size: 20px;
 }
 
-.items .sorting {
+.items .selected-thumbnail {
+  background-origin: border-box;
   border: solid 3px #55acee;
+  box-sizing: border-box;
 }
 
 a.birthday {
