--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20151224")
-    script(src="/javascripts/client.js?d=20151224", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20151226")
+    script(src="/javascripts/client.js?d=20151226", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -60,6 +60,8 @@ html(lang="ja")
           | てきすと
         textarea#replytext(readonly)
     div.clearboth
+    div#animation-canvas-wrapper
+      canvas#animation-canvas
     div#updated.updated ならび順を保存しました
     div#scrollToTop.scrollToTop ↑
     div.footer
