--- a/dest/views/index.jade
+++ b/dest/views/index.jade
@@ -9,7 +9,7 @@ html(lang="ja")
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
     link(rel="stylesheet", href="/stylesheets/style.css?d=20160307")
-    script(src="/javascripts/client.js?d=20160307", defer)
+    script(src="/javascripts/client.js?d=20160307_2", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
