--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,10 @@ body.hinamatsuri-background {
   background-position: 0 0, 0 0, 20px 35px, 20px 35px, 0 0, 20px 35px;
 }
 
+body.aprilfool-background {
+  background-color: #fdd9d9;
+}
+
 .title {
   margin: 20px 0;
   text-align: center;
