--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -8,8 +8,8 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20160331")
-    script(src="/javascripts/client.js?d=20160331", defer)
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20160416")
+    script(src="/javascripts/client.js?d=20160416", defer)
     script.
       var _id         = "#{id}";
       var _stampOrder = !{JSON.stringify(stampOrder)};
@@ -38,6 +38,8 @@ html(lang="ja")
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow #{tweetCount}
+      a.statshirt(href="https://startune.booth.pm/items/232555")
+        p すたTシャツ
       div#sort.mode
         label ならべかえ
         label#sortlabel.modelabel.off OFF
