すたンプを4種類追加

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -637,3 +637,19 @@ a.statshirt {
 .sprite-stamp058 {
     background-position: -100px -700px;
 }
+
+.sprite-stamp059 {
+    background-position: -200px -700px;
+}
+
+.sprite-stamp060 {
+    background-position: -300px -700px;
+}
+
+.sprite-stamp061 {
+    background-position: -400px -700px;
+}
+
+.sprite-stamp062 {
+    background-position: -500px -700px;
+}
