--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20160607")
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20160908")
     script(src="/javascripts/client.js?d=20160416", defer)
     script.
       var _id         = "#{id}";
@@ -38,8 +38,7 @@ html(lang="ja")
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow #{tweetCount}
-      a.statshirt(href="https://startune.booth.pm/items/232555")
-        p すたTシャツ
+      a.hobo_stabook(href="https://7144.booth.pm/items/304792")
       div#sort.mode
         label ならべかえ
         label#sortlabel.modelabel.off OFF
@@ -50,6 +49,8 @@ html(lang="ja")
       a.sta4koma(href="http://sta4koma.rgx6.com/")
         p 4コマまんが
       a.stabook(href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=50201705")
+      a.statshirt(href="https://startune.booth.pm/items/232555")
+        p すたTシャツ
       a.statobashi(target="_blank", href="https://github.com/rgx6/StaTobashiDesktop/releases/download/v1.0.1/StaTobashi_v1.0.1.zip")
         p すたとばし
           br
