風呂敷アンケートへのリンクを追加。

--- a/dest/views/index.pug
+++ b/dest/views/index.pug
@@ -8,7 +8,7 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20160908")
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20160916")
     script(src="/javascripts/client.js?d=20160416", defer)
     script.
       var _id         = "#{id}";
@@ -39,6 +39,10 @@ html(lang="ja")
         p ツイート
       a#count.count.arrow #{tweetCount}
       a.hobo_stabook(href="https://7144.booth.pm/items/304792")
+      a.furoshiki(href="https://docs.google.com/forms/d/e/1FAIpQLScGnl4Z9GxWJkLYvN3nZmydaNmQG72G7kR7kIX2gyQBlD-f8A/viewform")
+        p ふろしき
+          br
+          | アンケート
       div#sort.mode
         label ならべかえ
         label#sortlabel.modelabel.off OFF
