--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ html(lang="ja")
     title="てゆうかもう寝よう。"
     link(rel="canonical", href="http://mouneyou.rgx6.com/")
     link(rel="icon", href="/images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="/stylesheets/style.css?d=20160916")
+    link(rel="stylesheet", href="/stylesheets/style.css?d=20170113")
     script(src="/javascripts/client.js?d=20160416", defer)
     script.
       var _id         = "#{id}";
@@ -38,6 +38,8 @@ html(lang="ja")
       a#tweet.tweet.arrow(target="_blank")
         p ツイート
       a#count.count.arrow #{tweetCount}
+      a.linestamp(href="https://store.line.me/stickershop/product/1372640")
+        p LINEすたンプ
       a.furoshiki(href="https://rgx.booth.pm/")
         p 風呂敷通販
       div#sort.mode
