ゴールデンウィーク対応。

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -36,7 +36,7 @@ body.aprilfool-background {
 }
 
 body.goldenweek-background {
-  background: linear-gradient(#eeda00, #ffd700);
+  background: linear-gradient(75deg, #410E01, #D7AD37, #FBD25C, #FAE56B);
 }
 
 .title {
